DeckList: Prevent linebreaks in header row

--- a/hsreplaynet/static/styles/components.scss
+++ b/hsreplaynet/static/styles/components.scss
@@ -89,6 +89,7 @@
 		margin-right: 0px;
 		padding-top: 8px;
 		padding-bottom: 8px;
+		white-space: nowrap;
 
 		.header-center {
 			text-align: center;
